add mobile view

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,24 @@
     <link rel="stylesheet" href="./style.css">
     <title>CookBook</title>
 </head>
+
 <body>
     <section class="header">
-        <div><h1>Cookbook Academy</h1></div>
+        <div>
+            <h1>Cookbook Academy</h1>
+        </div>
     </section>
     <div class="container">
         <div class="dropdown">
             <button>Select a Recipes</button>
             <div class="dropdown-content">
-            <a href="">Salad</a>
-            <a href="">Pizza</a>
-            <a href="">Burger</a>
-            <a href="">Dessert</a>
-            <a href="">Smoothie</a>
+                <a href="">Salad</a>
+                <a href="">Pizza</a>
+                <a href="">Burger</a>
+                <a href="">Dessert</a>
+                <a href="">Smoothie</a>
             </div>
-          </div>
+        </div>
         <div class="container-left">
             <h2 class="c-left-header">Our Recipes</h2>
             <div class="left-nav">
@@ -33,24 +37,52 @@
             </div>
         </div>
         <div class="container-right">
-            <div class="burger">
-                <img src="./src/amirali-mirhashemian-sc5sTPMrVfk-unsplash.jpg" height="200px" width="200px" alt="" class="burger-img">
-                <h3>Cheese Burger</h3>
-                <p>Details</p>
-                <button>READ MORE</button>
+            <div class="first-row">
+                <div class="burger">
+                    <img src="./src/amirali-mirhashemian-sc5sTPMrVfk-unsplash.jpg" height="200px" width="200px" alt=""
+                        class="burger-img">
+                    <h3>Cheese Burger</h3>
+                    <p>Details</p>
+                    <button>READ MORE</button>
+                </div>
+                <div class="burger">
+                    <img src="./src/amirali-mirhashemian-sc5sTPMrVfk-unsplash.jpg" height="200px" width="200px" alt=""
+                        class="burger-img">
+                    <h3>Cheese Burger</h3>
+                    <p>Mit diesem Rezept gelingen ihnen die perfekten Burger Patties, wie aus der USA.</p>
+                    <button>READ MORE</button>
+                </div>
+                <div class="burger">
+                    <img src="./src/amirali-mirhashemian-sc5sTPMrVfk-unsplash.jpg" height="200px" width="200px" alt=""
+                        class="burger-img">
+                    <h3>Cheese Burger</h3>
+                    <p>Details</p>
+                    <button>READ MORE</button>
+                </div>
             </div>
-            <div class="burger">
-                <img src="./src/amirali-mirhashemian-sc5sTPMrVfk-unsplash.jpg" height="200px" width="200px" alt="" class="burger-img">
-                <h3>Cheese Burger</h3>
-                <p>Mit diesem Rezept gelingen ihnen die perfekten Burger Patties, wie aus der USA.</p>
-                <button>READ MORE</button>
+            <div class="second-row">
+                <div class="burger">
+                    <img src="./src/amirali-mirhashemian-sc5sTPMrVfk-unsplash.jpg" height="200px" width="200px" alt=""
+                        class="burger-img">
+                    <h3>Cheese Burger</h3>
+                    <p>Details</p>
+                    <button>READ MORE</button>
+                </div><div class="burger">
+                    <img src="./src/amirali-mirhashemian-sc5sTPMrVfk-unsplash.jpg" height="200px" width="200px" alt=""
+                        class="burger-img">
+                    <h3>Cheese Burger</h3>
+                    <p>Details</p>
+                    <button>READ MORE</button>
+                </div><div class="burger">
+                    <img src="./src/amirali-mirhashemian-sc5sTPMrVfk-unsplash.jpg" height="200px" width="200px" alt=""
+                        class="burger-img">
+                    <h3>Cheese Burger</h3>
+                    <p>Details</p>
+                    <button>READ MORE</button>
+                </div>
             </div>
-            <div class="burger">
-                <img src="./src/amirali-mirhashemian-sc5sTPMrVfk-unsplash.jpg" height="200px" width="200px" alt="" class="burger-img">
-                <h3>Cheese Burger</h3>
-                <p>Details</p>
-                <button>READ MORE</button>
-            </div>
-    </div>
+
+        </div>
 </body>
+
 </html>
