--- a/index.html
+++ b/index.html
@@ -31,21 +31,25 @@
                     <img src="assets/img/pizza1.png" alt="">
                     <h3>Pizza Spicy Style</h3>
                     <p>Mit Sweet-Apple-Soße (pikant), Chicken Strips (wahlweise American Style oder Spicy Style), Broccoli, roten Zwiebeln, echtem Gouda und Cheddar-Käse</p>
+                    <a href="#">Read more</a>
                 </section>
                 <section class="recipe">
                     <img src="assets/img/pizza2.png" alt="">
                     <h3>Pizza Chicken</h3>
                     <p>Mit Pizzasoße, Hähnchenbrust, Paprika, Jalapenos, echtem Gouda und Orange-Ingwer-Soße (pikant)</p>
+                    <a href="#">Read more</a>
                 </section>
                 <section class="recipe">
                     <img src="assets/img/pizza3.png" alt="">
                     <h3>Pizza Salami</h3>
                     <p>Mit Pizzasoße, extra viel Salami und reichlich echtem Gouda</p>
+                    <a href="#">Read more</a>
                 </section>
                 <section class="recipe">
                     <img src="assets/img/pizza4.png" alt="">
                     <h3>Pizza Hot-Dog</h3>
                     <p>Mit Pizzasoße, Würstchen, Hot-Dog-Gurke, Röstzwiebeln, Hot-Dog-Remoulade und echtem Gouda</p>
+                    <a href="#">Read more</a>
                 </section>
             </main>
         </div>
